--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 
 
-    <script src="js/main.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/costo_total.js"></script>
 </body>
 </html>
