--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
 
     <script src="js/login.js"></script>
     <script src="js/costo_total.js"></script>
+    <script src="js/prueba1.js"></script>
 </body>
 </html>
