--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
 
     <script src="js/login.js"></script>
-    <script src="js/costo_total.js"></script>
-    <script src="js/prueba1.js"></script>
+    <script src="js/array.js"></script>
 </body>
 </html>
