--- a/index.html
+++ b/index.html
@@ -5,47 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Secret Makeup</title>
-    <link rel="icon" href="img/pink-heart.png">
+    <link rel="icon" href="img/icon.jpg">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Great+Vibes&family=Sacramento&display=swap" rel="stylesheet">
+    <!-- Estilos propios CSS -->
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Normalize.css -->
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light shadow p-3 mb-5" style="background-color: #F8E2CF;">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #F8E2CF;">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
                     <img src="img/logo-removebg.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                            <a class="nav-link active" aria-current="page" href="index.html" style="color: #594A41;">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                              <a class="nav-link" href="pages/ofertas.html">Ofertas</a>
-                        </li>
-                        <li class="nav-item">
-                              <a class="nav-link" href="pages/carrito.html">Carrito</a>
+                            <a class="nav-link" href="pages/carrito.html">
+                                <i class="bi bi-cart3"></i>
+                                Carrito
+                            </a>
                         </li> 
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Ingresa aquí..." aria-label="Search">
+                        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+                    </form>
                 </div>
             </div>  
         </nav>
+        <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/login.html" style="color: #594A41;"><i class="bi bi-person-fill"></i>Crear cuenta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/login.html" style="color: #594A41;">Iniciar Sesión</a>
+                </li>
+              </ul>
+        </div>
     </header>
-    <main>
 
+    <main class="container">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/banner1.jpg" class="d-block w-100" alt="mySecretMakeup_banner1">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/banner2.jpg" class="d-block w-100" alt="mySecretMakeup_banner2">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/banner3.png" class="d-block w-100" alt="mySecretMakeup_banner3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <div class="container">
+            <h1 class="text-center title">My Secret Makeup</h1>
+            <h2 class="text-center">Categorías</h2>
+        </div>
+        <div class="tarjetas">
+            <div class="image">
+                <img class="img-fluid image__img" src="img/makeupmodel.jpg" alt="makeup">
+                <div class="image__text">
+                    <h3 class="image__textTitle">Maquillaje / Makeup</h3>
+                    <h4 class="image__textDescription">Explora el mundo del maquillaje asiático aquí!</h4>
+                    <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
+                </div>              
+            </div>
+            <div class="image">
+                <img class="img-fluid image__img" src="img/skincaremodel.jpeg" alt="skincare">
+                <div class="image__text">
+                    <h3 class="image__textTitle">Cuidado facial / Skincare</h3>
+                    <h4 class="image__textDescription">Cuida tu piel con nuestros productos! <i class="bi bi-hearts"></i></h4>
+                    <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
+                </div>              
+            </div>
+        </div>
+
+<!--         <div class="contenedor">
+            <div class="modelos container d-flex flex-row justify-content-evenly">
+                <img class="img-fluid m-1" src="./img/makeupmodel.jpg" alt="makeupmodel">
+                <img class="img-fluid m-1" src="./img/skincaremodel.jpeg" alt="skincaremodel">
+            </div>
+        </div> -->
     </main>
 
+    <footer class="text-center text-lg-start mt-5" style="background-color: #F5C6AA;">
+        <div class="container d-flex justify-content-center py-4">
+            <a class="btn btn-primary btn-floating m-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a class="btn btn-primary btn-floating m-2" href="https://www.youtube.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-youtube"></i>
+            </a>
+            <a class="btn btn-primary btn-floating m-2" href="https://www.instagram.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a class="btn btn-primary btn-floating m-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-twitter"></i>
+            </a>
+        </div>
+
+        <!-- Copyright -->
+        <div class="text-center text-white p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+            <h6>&copy; Copyright 2022 My Secret Makeup | Created by Tsue Motosono</h5>
+        </div>
+    </footer>
 
 
-    <script src="js/login.js"></script>
-    <script src="js/array.js"></script>
+    <!-- <script src="js/login.js"></script> -->
+   <!--  <script src="js/array.js"></script> -->
+   <!-- <script src="js/search.js"></script> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
