--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,8 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito</title>
+    <link rel="icon" href="../img/icon.jpg">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Great+Vibes&family=Sacramento&display=swap" rel="stylesheet">
+    <!-- Estilos propios CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- Normalize.css -->
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #F8E2CF;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../img/logo-removebg.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/carrito.html" style="color: #594A41;">
+                                <i class="bi bi-cart3"></i>
+                                Carrito
+                            </a>
+                        </li> 
+                    </ul>
+                </div>
+            </div>  
+        </nav>
+        <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/login.html" style="color: #594A41;"><i class="bi bi-person-fill"></i>Crear cuenta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/login.html" style="color: #594A41;">Iniciar Sesión</a>
+                </li>
+              </ul>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer class="text-center text-lg-start mt-5" style="background-color: #F5C6AA;">
+        <div class="container d-flex justify-content-center py-4">
+            <a class="btn btn-primary btn-floating m-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a class="btn btn-primary btn-floating m-2" href="https://www.youtube.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-youtube"></i>
+            </a>
+            <a class="btn btn-primary btn-floating m-2" href="https://www.instagram.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a class="btn btn-primary btn-floating m-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+                <i class="bi bi-twitter"></i>
+            </a>
+        </div>
+
+        <!-- Copyright -->
+        <div class="text-center text-white p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+            <h6>&copy; Copyright 2022 My Secret Makeup | Created by Tsue Motosono</h5>
+        </div>
+    </footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
