--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>My Secret Makeup</title>
     <link rel="icon" href="../img/icon.jpg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -22,64 +22,13 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #F8E2CF;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../img/logo-removebg.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
+                <a class="navbar-brand" href="../index.html" style="color: #594A41;">
+                    <i class="bi bi-arrow-left-circle-fill"> Volver al inicio</i>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../pages/productos.html" style="color: #594A41;">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/carrito.html">
-                                <i class="bi bi-cart3"></i>
-                                Carrito
-                            </a>
-                        </li> 
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Ingresa aquí..." aria-label="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
-                    </form>
-                </div>
-            </div>  
-        </nav>
-        <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/login.html" style="color: #594A41;"><i class="bi bi-person-fill"></i>Crear cuenta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/login.html" style="color: #594A41;">Iniciar Sesión</a>
-                </li>
-              </ul>
-        </div>
     </header>
-    
-    <main>
-        <h2 class="text-center mt-5">Productos</h2>
-        <!-- se llama los productos de js -->
-        <div id="productos">
 
-        </div>
 
-        <!-- se muestran los filtros -->
-        <aside>
-
-        </aside>
-
-        <div class="d-flex justify-content-center my-4">
-            <img class="w-50" src="../img/banner6.jpg" alt="skincareAndMakeup_banner">
-        </div>
-    </main>
-
-    <footer class="text-center text-lg-start mt-5" style="background-color: #F5C6AA;">
+     <footer class="text-center text-lg-start mt-2" style="background-color: #F5C6AA;">
         <div class="container d-flex justify-content-center py-4">
             <a class="btn btn-primary btn-floating m-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
                 <i class="bi bi-facebook"></i>
@@ -93,7 +42,7 @@
             <a class="btn btn-primary btn-floating m-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
                 <i class="bi bi-twitter"></i>
             </a>
-        </div>
+          </div>
 
         <!-- Copyright -->
         <div class="text-center text-white p-2" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -102,6 +51,9 @@
     </footer>
 
 
+
+    
+    <script src="js/login.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
