--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="image">
                 <img class="img-fluid image__img" src="img/skincaremodel.jpeg" alt="skincare">
                 <div class="image__text">
-                    <h3 class="image__textTitle">Cuidado facial / Skincare</h3>
+                    <h3 class="image__textTitle">Cuidado de la piel / Skincare</h3>
                     <h4 class="image__textDescription">Cuida tu piel con nuestros productos! <i class="bi bi-hearts"></i></h4>
                     <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
                 </div>              
@@ -140,8 +140,8 @@
 
 
     <!-- <script src="js/login.js"></script> -->
-   <!--  <script src="js/array.js"></script> -->
-   <!-- <script src="js/search.js"></script> -->
+    <!-- <script src="js/costo_total.js"></script> -->
+    <script src="js/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
