--- a/index.html
+++ b/index.html
@@ -53,16 +53,21 @@
         <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/login.html" style="color: #594A41;"><i class="bi bi-person-fill"></i>Crear cuenta</a>
+                    <a class="nav-link" href="pages/login_and_register.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/login.html" style="color: #594A41;">Iniciar Sesión</a>
+                    <a class="nav-link" href="pages/login_and_register.html" style="color: #594A41;">Iniciar Sesión</a>
                 </li>
               </ul>
         </div>
     </header>
 
-    <main class="container">
+    <main class="container text-center">
+        <!-- saludo -->
+        <div id="bienvenida" class="my-4">
+
+        </div>
+        <!-- banner -->
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -86,53 +91,58 @@
         </div>
 
         <div class="container">
-            <h1 class="text-center title">My Secret Makeup</h1>
-            <h2 class="text-center">Categorías</h2>
-        </div>
-        <div class="tarjetas">
-            <div class="image">
-                <img class="img-fluid image__img" src="img/makeupmodel.jpg" alt="makeup">
-                <div class="image__text">
-                    <h3 class="image__textTitle">Maquillaje / Makeup</h3>
-                    <h4 class="image__textDescription">Explora el mundo del maquillaje asiático aquí!</h4>
-                    <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
-                </div>              
+            <div>
+                <h1 class="text-center title">My Secret Makeup</h1>
+                <h2 class="text-center">Categorías</h2>
             </div>
-            <div class="image">
-                <img class="img-fluid image__img" src="img/skincaremodel.jpeg" alt="skincare">
-                <div class="image__text">
-                    <h3 class="image__textTitle">Cuidado de la piel / Skincare</h3>
-                    <h4 class="image__textDescription">Cuida tu piel con nuestros productos! <i class="bi bi-hearts"></i></h4>
-                    <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
-                </div>              
+            <div class="tarjetas_modelos row row-cols-1">
+                <div class="image">
+                    <img class="img-fluid image__img" src="img/makeupmodel.jpg" alt="makeup">
+                    <div class="image__text">
+                        <h3 class="image__textTitle">Maquillaje / Makeup</h3>
+                        <h4 class="image__textDescription">Explora el mundo del maquillaje asiático aquí!</h4>
+                        <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
+                    </div>              
+                </div>
+                <div class="image">
+                    <img class="img-fluid image__img" src="img/skincaremodel.jpeg" alt="skincare">
+                    <div class="image__text">
+                        <h3 class="image__textTitle">Cuidado de la piel / Skincare</h3>
+                        <h4 class="image__textDescription">Cuida tu piel con nuestros productos! <i class="bi bi-hearts"></i></h4>
+                        <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
+                    </div>              
+                </div>
             </div>
         </div>
     </main>
 
-    <footer class="text-center text-lg-start mt-5" style="background-color: #F5C6AA;">
-        <div class="container d-flex justify-content-center py-4">
-            <a class="btn btn-primary btn-floating m-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+    <footer class="text-center text-lg-start mt-0" style="background-color: #F5C6AA;">
+        <div class="container d-flex justify-content-center pt-4">
+            <h5 style="color: #fff">Redes sociales</h5>
+        </div>
+        <div class="container d-flex justify-content-center pt-3 pb-5">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
                 <i class="bi bi-facebook"></i>
             </a>
-            <a class="btn btn-primary btn-floating m-2" href="https://www.youtube.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.youtube.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
                 <i class="bi bi-youtube"></i>
             </a>
-            <a class="btn btn-primary btn-floating m-2" href="https://www.instagram.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.instagram.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
                 <i class="bi bi-instagram"></i>
             </a>
-            <a class="btn btn-primary btn-floating m-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: beige;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
                 <i class="bi bi-twitter"></i>
             </a>
         </div>
 
         <!-- Copyright -->
         <div class="text-center text-white p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-            <h6>&copy; Copyright 2022 My Secret Makeup | Created by Tsue Motosono</h5>
+            <h6>&copy; Copyright 2022 My Secret Makeup | Creado por Tsue Motosono</h5>
         </div>
     </footer>
 
 
-    <!-- <script src="js/login.js"></script> -->
+    <script src="js/login.js"></script>
     <!-- <script src="js/costo_total.js"></script> -->
     <script src="js/main.js"></script>
 
