--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #F8E2CF;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="img/logo-removebg.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
+                    <img src="img/logo_comp.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -71,13 +71,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/banner1.jpg" class="d-block w-100" alt="mySecretMakeup_banner1">
+                    <img src="img/banner1_comp.jpg" class="d-block w-100" alt="mySecretMakeup_banner1">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/banner2.jpg" class="d-block w-100" alt="mySecretMakeup_banner2">
+                    <img src="img/banner2_comp.jpg" class="d-block w-100" alt="mySecretMakeup_banner2">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/banner3.png" class="d-block w-100" alt="mySecretMakeup_banner3">
+                    <img src="img/banner3_comp.png" class="d-block w-100" alt="mySecretMakeup_banner3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -97,7 +97,7 @@
             </div>
             <div class="tarjetas_modelos row row-cols-1">
                 <div class="image">
-                    <img class="img-fluid image__img" src="img/makeupmodel.jpg" alt="makeup">
+                    <img class="img-fluid image__img" src="img/makeupmodel_comp.jpg" alt="makeup">
                     <div class="image__text">
                         <h3 class="image__textTitle">Maquillaje / Makeup</h3>
                         <h4 class="image__textDescription">Explora el mundo del maquillaje asiático aquí!</h4>
@@ -105,7 +105,7 @@
                     </div>              
                 </div>
                 <div class="image">
-                    <img class="img-fluid image__img" src="img/skincaremodel.jpeg" alt="skincare">
+                    <img class="img-fluid image__img" src="img/skincaremodel_comp.jpg" alt="skincare">
                     <div class="image__text">
                         <h3 class="image__textTitle">Cuidado de la piel / Skincare</h3>
                         <h4 class="image__textDescription">Cuida tu piel con nuestros productos! <i class="bi bi-hearts"></i></h4>
