--- a/pages/login_and_register.html
+++ b/pages/login_and_register.html
@@ -43,10 +43,10 @@
                         <img src="../img/discount2.gif" class="d-block w-100" alt="mySecretMakeup_banner2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/discount3.png" class="d-block w-100" alt="mySecretMakeup_banner3">
+                        <img src="../img/discount3_comp.png" class="d-block w-100" alt="mySecretMakeup_banner3">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/discount4.png" class="d-block w-100" alt="mySecretMakeup_banner3">
+                        <img src="../img/discount4_comp.png" class="d-block w-100" alt="mySecretMakeup_banner3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
