--- a/pages/productos.html
+++ b/pages/productos.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #F8E2CF;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/logo-removebg.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
+                    <img src="../img/logo_comp.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
