desafío: incorporar eventos

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/login_and_register.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
+                    <a class="nav-link" href="pages/login_and_signup.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/login_and_register.html" style="color: #594A41;">Iniciar Sesión</a>
+                    <a class="nav-link" href="pages/login_and_signup.html" style="color: #594A41;">Iniciar Sesión</a>
                 </li>
               </ul>
         </div>
@@ -92,11 +92,11 @@
 
         <div class="container">
             <div>
-                <h1 class="text-center title">My Secret Makeup</h1>
-                <h2 class="text-center">Categorías</h2>
+                <h1 class="text-center title-index">My Secret Makeup</h1>
+                <h2 id="categoria" class="text-center mb-4">Categorías</h2>
             </div>
-            <div class="tarjetas_modelos row row-cols-1">
-                <div class="image">
+            <div class="row mb-4">
+                <div class="image col-sm-12 col-md-6 mx-auto mb-4">
                     <img class="img-fluid image__img" src="img/makeupmodel_comp.jpg" alt="makeup">
                     <div class="image__text">
                         <h3 class="image__textTitle">Maquillaje / Makeup</h3>
@@ -104,7 +104,7 @@
                         <a class="image__button" href="pages/productos.html">VER PRODUCTOS</a>
                     </div>              
                 </div>
-                <div class="image">
+                <div class="image col-sm-12 col-md-6 mx-auto mb-4">
                     <img class="img-fluid image__img" src="img/skincaremodel_comp.jpg" alt="skincare">
                     <div class="image__text">
                         <h3 class="image__textTitle">Cuidado de la piel / Skincare</h3>
