--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -51,10 +51,10 @@
         <div class="navbar-expand-lg navbar-light shadow p-2" style="background-color: #F5C6AA;">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/login_and_register.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
+                    <a class="nav-link" href="../pages/login_and_signup.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/login_and_register.html" style="color: #594A41;">Iniciar Sesión</a>
+                    <a class="nav-link" href="../pages/login_and_signup.html" style="color: #594A41;">Iniciar Sesión</a>
                 </li>
               </ul>
         </div>
@@ -101,7 +101,7 @@
                                     </div>
                         <!-- detalles de la tarjeta -->
                                     <div class="col-lg-5">
-                                        <div class="card text-white rounded-3" style="background-color: #d39e8d;">
+                                        <div class="card text-white rounded-3" style="background-color: #d39e8df5;">
                                             <div class="card-body">
                                                 <div class="d-flex justify-content-between align-items-center mb-4">
                                                     <h3 class="mb-0">Datos de la tarjeta</h3>
