--- a/pages/productos.html
+++ b/pages/productos.html
@@ -43,45 +43,29 @@
                             </a>
                         </li> 
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Ingresa aquí..." aria-label="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
-                    </form>
                 </div>
             </div>  
         </nav>
         <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/login_and_register.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
+                    <a class="nav-link" href="../pages/login_and_signup.html" style="color: #594A41;"><i class="bi bi-person-circle"></i></i> Crear cuenta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/login_and_register.html" style="color: #594A41;">Iniciar Sesión</a>
+                    <a class="nav-link" href="../pages/login_and_signup.html" style="color: #594A41;">Iniciar Sesión</a>
                 </li>
               </ul>
         </div>
     </header>
     
     <main class="container">
-        <h2 class="text-center my-5">Productos</h2>
-        <!-- se muestra todos los productos -->
-        <div id="contenedor-productos">  
-            <!-- <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 mb-4">
-                        <div class="card text-center h-100 shadow">
-                            <img src="https://cdn.shopify.com/s/files/1/0612/7983/0255/products/41_750x.png?v=1641832827" class="card-img-top" alt="mySecretMakeup producto">
-                            <div class="card-body">
-                                <h5 class="card-title">Clean It Zero Cleansing Balm</h5>
-                                <p class="card-text mb-2">Aceite limpiador facial.</p>
-                                <p class="card-text mb-2">Marca: Banila Co.</p>
-                                <h6 class="card-subtitle mb-2 text-muted">$3000</h6>
-                                <a href="#" class="card__button"><i class="bi bi-plus-circle"></i> AGREGAR</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>  --> 
+        <h2 class="text-center my-3">Productos</h2>
+        <input class="form-control my-2 mx-auto" id="myInput" type="text" placeholder="Ingrese aquí lo que busca..." style="width: 35%;">
+
+        <h3 class="text-danger my-5 text-center" id="noEncontrado" style="display: none;">No se encontró el producto buscado</h3>
+        
+        <div class="row mt-1" id="contenedor-productos">  
+            <!-- productos --> 
         </div>
 
 
@@ -90,7 +74,7 @@
 
         </aside>
 
-        <div class="d-flex justify-content-center my-4">
+        <div class="d-flex justify-content-center my-5">
             <img class="w-50" src="../img/banner6.jpg" href="#" alt="skincareAndMakeup_banner">
         </div>
     </main>
