--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
     </footer>
 
 
+    <script src="js/saludo.js"></script>
     <script src="js/login.js"></script>
-    <!-- <script src="js/costo_total.js"></script> -->
-    <script src="js/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
