--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
             <h5 style="color: #fff">Redes sociales</h5>
         </div>
         <div class="container d-flex justify-content-center pt-3 pb-5">
-            <a class="btn btn-primary btn-floating mx-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: rgba(0, 0, 0, 0.15); border-color: #fff;">
                 <i class="bi bi-facebook"></i>
             </a>
-            <a class="btn btn-primary btn-floating mx-2" href="https://www.youtube.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.youtube.com/" target="_blank" role="button" style="background-color: rgba(0, 0, 0, 0.15); border-color: #fff;">
                 <i class="bi bi-youtube"></i>
             </a>
-            <a class="btn btn-primary btn-floating mx-2" href="https://www.instagram.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.instagram.com/" target="_blank" role="button" style="background-color: rgba(0, 0, 0, 0.15); border-color: #fff;">
                 <i class="bi bi-instagram"></i>
             </a>
-            <a class="btn btn-primary btn-floating mx-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: #F8E2CF; border-color: #fff;">
+            <a class="btn btn-primary btn-floating mx-2" href="https://www.twitter.com/" target="_blank" role="button" style="background-color: rgba(0, 0, 0, 0.15); border-color: #fff;">
                 <i class="bi bi-twitter"></i>
             </a>
         </div>
