--- a/pages/login_and_signup.html
+++ b/pages/login_and_signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Secret Makeup</title>
+    <title>Login/Signup</title>
     <link rel="icon" href="../img/icon.jpg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -43,25 +43,25 @@
                     <div class="slide-tab"></div>
                 </div>
                 <div class="form-inner">
-                    <form action="#" class="login">
+                    <form onsubmit="loginFunc()" action="#" class="login">
                         <div class="field">
-                            <input type="text" placeholder="E-mail" required>
+                            <input type="text" placeholder="E-mail" id="email" required>
                         </div>
                         <div class="field">
-                            <input type="password" placeholder="Contraseña" required>
+                            <input type="password" placeholder="Contraseña" id="password">
                         </div>
                         <div class="pass-link"><a href="#">¿Te olvidaste la contraseña?</a></div>
                         <div class="field">
                             <input type="submit" value="Iniciar sesión">
                         </div>
-                        <div class="signup-link">¿No eres usuario? <a href="#">Registrate ahora</a></div>
+                        <div id="result" class="signup-link">¿No eres usuario? <a href="#">Registrate ahora</a></div>
                     </form>
-                    <form action="#" class="signup">
+                    <form  onsubmit="signup()" class="signup">
                         <div class="field">
-                            <input type="text" placeholder="E-mail" required>
+                            <input type="text" placeholder="E-mail" id="correo" required>
                         </div>
                         <div class="field">
-                            <input type="password" placeholder="Contraseña" required>
+                            <input type="password" placeholder="Contraseña" id="contrasenha" required>
                         </div>
                         <div class="field">
                             <input type="password" placeholder="Confirme su contraseña" required>
@@ -132,7 +132,7 @@
     </footer>
 
 
-    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/login.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
