--- a/index.html
+++ b/index.html
@@ -23,32 +23,25 @@
         <nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #F8E2CF;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="img/logo_comp.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
+                    <img src="./img/logo_comp.png" class="logo" alt="mySecretMakeup logo" style="height: 90px;">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
+                <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html" style="color: #594A41;">Inicio</a>
+                            <a class="nav-link" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/productos.html">Productos</a>
+                            <a class="nav-link active" aria-current="page" href="pages/productos.html" style="color: #594A41;">Productos</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/carrito.html">
-                                <i class="bi bi-cart3"></i>
-                                Carrito
-                            </a>
-                        </li> 
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Ingresa aquí..." aria-label="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
-                    </form>
+                    <span class="navbar-text">
+                        <button class="btn" id="boton-carrito" type="button" data-bs-toggle="modal" data-bs-target="#miModal"><i class="bi bi-cart3"></i><span id="contadorCarrito"> 0</span></button>
+                    </span>
                 </div>
-            </div>  
+            </div>
         </nav>
         <div class="navbar-expand-lg navbar-light shadow p-2 mb-5" style="background-color: #F5C6AA;">
             <ul class="nav justify-content-center">
@@ -58,15 +51,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="pages/login_and_signup.html" style="color: #594A41;">Iniciar Sesión</a>
                 </li>
-              </ul>
+            </ul>
         </div>
     </header>
 
     <main class="container text-center">
-        <!-- saludo -->
-        <div id="bienvenida" class="my-4">
-
-        </div>
         <!-- banner -->
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -118,7 +107,7 @@
 
     <footer class="text-center text-lg-start mt-0" style="background-color: #F5C6AA;">
         <div class="container d-flex justify-content-center pt-4">
-            <h5 style="color: #fff">Redes sociales</h5>
+            <h5 id="test" style="color: #fff">Redes sociales</h5>
         </div>
         <div class="container d-flex justify-content-center pt-3 pb-5">
             <a class="btn btn-primary btn-floating mx-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: rgba(0, 0, 0, 0.15); border-color: #fff;">
@@ -141,8 +130,7 @@
         </div>
     </footer>
 
-
-    <script src="js/saludo.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/login.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
