corrección de un pequeño error

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 </div>
                                 <div class="row">   
                                     <h5 class="col-md-8 align-self-end"><a href="#" class="text-body" style="text-decoration: none;" data-bs-dismiss="modal"><i class="fas fa-long-arrow-alt-left me-2"></i>Seguir comprando</a></h5>
-                                    <a href="../pages/pago.html" class="btn col-md-4" style="background-color: #f1b592;">Continuar con el pago <i class="bi bi-wallet2"></i></a>
+                                    <a href="pages/pago.html" class="btn col-md-4" style="background-color: #f1b592;">Continuar con el pago <i class="bi bi-wallet2"></i></a>
                                 </div>
                             </div>
                         </div>
